Project

General

Profile

Actions

Bug #15703

closed

showmount: RPC: Program/version mismatch

Added by Gordon Ross 4 months ago. Updated about 1 month ago.

Status:
Closed
Priority:
Normal
Assignee:
Category:
nfs - NFS server and client
Start date:
Due date:
% Done:

100%

Estimated time:
Difficulty:
Medium
Tags:
Gerrit CR:
External Bug:
racktop:BSR-5258

Description

With an NFS server is configured for NFSv3 as the minimum:

# sharectl set -p server_versmin=3 nfs

and without the fix for #15702 we get the error:
$ showmount -e server
showmount: server: RPC: Program not registered

For testing this, I did monitor server traffic with 'snoop rpc mount' and tested showmount, dfmounts and dfshares commands from client systems. Confirmed the highest available version was used; MacOS showmount is always using version 1 and was working as expected.
To test higher versions and fallbacks, I was using modified mountd server, which had version 3 or version 2 disabled (note it does not help to unregister version from rpcbind). The patched programs did fall back to highest available mount protocol version, as expected.


Related issues

Related to illumos gate - Bug #15702: showmount fails for Solaris, AIX and HP-UX clientsClosedToomas Soome

Actions
Actions #1

Updated by Gordon Ross 4 months ago

The showmount program would be better to first try MOUNTVERS3, and if the RPC clnt_create call fails with RPC_PROGVERSMISMATCH then try again with the (older) MOUNTVERS. Or something like that.

Actions #2

Updated by Gordon Ross 4 months ago

  • External Bug set to racktop:BSR-5258
Actions #3

Updated by Gordon Ross 4 months ago

  • Related to Bug #15702: showmount fails for Solaris, AIX and HP-UX clients added
Actions #4

Updated by Electric Monk about 2 months ago

  • Gerrit CR set to 3005
Actions #5

Updated by Toomas Soome about 2 months ago

  • Status changed from New to In Progress
  • Assignee set to Toomas Soome
  • % Done changed from 0 to 90
Actions #6

Updated by Toomas Soome about 1 month ago

  • Description updated (diff)
  • Status changed from In Progress to Pending RTI
Actions #7

Updated by Electric Monk about 1 month ago

  • Status changed from Pending RTI to Closed
  • % Done changed from 90 to 100

git commit a2f332bbcd749567eb464acdc1913e7bde22f36e

commit  a2f332bbcd749567eb464acdc1913e7bde22f36e
Author: Toomas Soome <tsoome@me.com>
Date:   2023-08-22T16:46:00.000Z

    15703 showmount: RPC: Program/version mismatch
    Reviewed by: Igor Kozhukhov <igor@dilos.org>
    Reviewed by: Gordon Ross <gordon.w.ross@gmail.com>
    Approved by: Dan McDonald <danmcd@mnx.io>

Actions

Also available in: Atom PDF